<resources>
    <string name="app_name">LibraryApp-MVVM-Retrofit-Room-Navigation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_account">My Account</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="library">Library</string>
    <string name="search">Search</string>

    <string name="spinner">Spinner</string>
    <string-array name="Categories">

        <item>animal</item>
        <item>children</item>
        <item>classics</item>
        <item>countries</item>
        <item>education</item>
        <item>fiction</item>
        <item>geography</item>
        <item>history</item>
        <item>literature</item>
        <item>law</item>
        <item>music</item>
        <item>periodicals</item>
        <item>psychology</item>
        <item>religion</item>
        <item>romance</item>
        <item>science</item>

    </string-array>

</resources>