<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">



    <item
        android:title="@string/my_account">

        <menu>

            <item
                android:id="@+id/home"
                android:title="@string/home"
                android:icon="@drawable/ic_home"/>

            <item
                android:id="@+id/categories"
                android:title="@string/categories"
                android:icon="@drawable/ic_categories"/>

            <item
                android:id="@+id/libraryFragment"
                android:title="@string/library"
                android:icon="@drawable/ic_library"/>

            <item
                android:id="@+id/searchFragment"
                android:title="@string/search"
                android:icon="@drawable/ic_search"
                app:iconTint="@color/black"/>



        </menu>



    </item>

    <item
        android:title="Other">

        <menu>


            <item
                android:id="@+id/exit"
                android:title="Exit"
                android:icon="@drawable/ic_exit"
                android:iconTint="@color/black"/>


        </menu>

    </item>

</menu>